--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -20,6 +20,7 @@
                 height: 200px
                 object-fit: contain
                 border-radius: 1rem
+                margin-top: 2%
             @media only screen and (min-width: 1024px)
                 min-width: 35vw
                 max-height: 87vh
@@ -29,12 +30,14 @@
             width: 100%
             padding: 3%
             align-self: flex-start
+            letter-spacing: 1px
             &__title
                 @media only screen and (max-width: 1023px)
                     font-size: 130%
                     font-family: 'Baloo Bhai'
                     display: flex
                     justify-content: center
+                    padding: 1%
                 @media only screen and (min-width: 1024px)
                     font-size: 180%
                     font-family: 'Baloo Bhai'
@@ -43,8 +46,8 @@
                 @media only screen and (max-width: 1023px)
                     font-size: 60%
                     line-height: 15px
-                    margin-left: 2.5%
-                    margin-top: -3%
+                    margin-top: -1%
+                    padding: 1%
                 @media only screen and (min-width: 1024px)
                     letter-spacing: 1.5px
                     line-height: 25px
