--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -26,6 +26,8 @@
             display: flex
             width: 90%
             height: 100%
+            @media only screen and (max-width: 1023px)
+                height: 80%
             .titles
                 display: flex
                 flex-wrap: wrap
@@ -47,9 +49,11 @@
                     display: flex
                     justify-content: flex-start
                     align-self: center
+                    margin-bottom: 2%
                     @media only screen and (max-width: 1023px)
                         font-size: 130%
                         justify-content: center
+                        margin-bottom: 3%
                 h5
                     font-size: 110%
                     display: flex
@@ -59,7 +63,7 @@
                     margin-top: 2%
                     @media only screen and (max-width: 1023px)
                         font-size: 80%
-                        margin: 3%
+                        margin-bottom: 5%
                         text-align: center
                         width: 100%
                         justify-content: center
@@ -75,7 +79,8 @@
                     color: whitesmoke
                     @media only screen and (max-width: 1023px)
                         margin-top: 1%
-                        width: 60%
+                        width: 55%
+                        height: 6vh
                         font-size: 90%
                         border-radius: 1rem
                     &:hover
@@ -90,7 +95,7 @@
         @media only screen and (max-width: 1023px)
             font-size: 200%
             justify-content: center
-            margin-top: 3%
+            margin-top: 4%
         @media only screen and (min-width: 1024px)
             font-size: 500%
 
