--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -1,28 +1,24 @@
 .bolder
     font-weight: 900
     font-size: 115%
-    
 .about-me
-    position: relative
-    top: 13vh
+    height: 100vh
     width: 100vw
-    height: 88vh
-    background: url("/img/bg-5.JPG")
-    background-repeat: no-repeat
-    background-size: cover
-    @media only screen and (max-width: 1023px)
-        top: 8vh
-        height: 93vh
+    display: flex
+    flex-direction: column
+    justify-content: center
+    background-color: #eee0a1
     .welcome
         display: flex
         @media only screen and (max-width: 1023px)
             flex-direction: column
             display: flex
+            height: 100%
             align-items: center
-        @media only screen and (min-width: 1024px)
-            flex-direction: row
+            justify-content: center
+            margin-top: 7%
         &__image
-            border: 1px solid 
+            border: 1px solid
             background-color: whitesmoke
             @media only screen and (max-width: 1023px)
                 height: 180px
@@ -34,34 +30,41 @@
                 max-height: 80vh
                 border-radius: 3rem
                 margin-left: 1.5%
-                margin-top: 2%
+                margin-top: 6%
         .info
             width: 62%
             height: 80vh
             padding: 2%
-            align-self: flex-start
             border: solid 1px
             border-radius: 2rem
             letter-spacing: 1px
-            margin-top: 2%
+            margin-top: 6%
             margin-left: 2%
-            background-color: whitesmoke
+            background-color: #fafafa
+            display: flex
+            flex-direction: column
+            justify-content: space-evenly
             @media only screen and (max-width: 1023px)
                 width: 95%
                 height: 59vh
                 margin-top: 3%
+                margin-left: 0
+                padding: 3%
+                display: flex
+                flex-direction: column
+                justify-content: space-evenly
             &__title
                 @media only screen and (max-width: 1023px)
                     font-size: 130%
                     font-family: 'Acme', sans-serif
                     display: flex
                     justify-content: center
-                    padding: 1%
                 @media only screen and (min-width: 1024px)
-                    font-size: 180%
+                    font-size: 220%
                     font-family: 'Acme', sans-serif
                     color: black
-                    margin-top: -1%
+                    margin-bottom: 1%
+    
             &__text
                 @media only screen and (max-width: 1023px)
                     font-size: 53%
