--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -2,16 +2,11 @@
     position: fixed
     z-index: 1000
     width: 100%
-    height: 13vh
+    height: 12.5vh
     display: flex
     justify-content: space-around
     align-items: center
-    background: url(/img/bg-5.JPG)
-    background-repeat: no-repeat
-    background-size: cover
-    background-position-y: top
-    background-position-x: right
-    //background-color: dodgerblue
+    background-color: #eee0a1
     font-weight: bold
     @media only screen and (max-width: 1023px)
         font-size: 100%
@@ -57,7 +52,7 @@
         justify-content: center
     &__icon
         max-width: 8vw
-        max-height: 8vh
+        max-height: 6vh
         margin: 0.5%
         @media only screen and (max-width: 1023px)
             max-width: 7vw
