--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -2,34 +2,18 @@
     width: 100vw
     height: 100vh
     .myName
-        position: relative
-        top: 13vh
-        width: 100vw
+        background-color: #eee0a1
+        height: 100%
         display: flex
-        justify-content: space-evenly
-        @media only screen and (max-width: 1023px)
-            height: 93%
-            flex-direction: column
-            background: url(/img/bg-5.JPG)
-            background-repeat: no-repeat
-            background-size: cover
-            background-position-y: top
-            background-position-x: left
-            align-items: center
-            top: 8vh
-        @media only screen and (min-width: 1024px)
-            height: 87%
-            background: url("/img/bg-5.JPG")
-            background-repeat: no-repeat
-            background-size: cover
-            align-items: center
+        justify-content: center
+        align-items: center
         .container
             display: flex
+            flex-direction: column
             justify-content: center
+            align-content: center
             width: 90%
             height: 100%
-            @media only screen and (max-width: 1023px)
-                margin-top: 6%
             .titles
                 display: flex
                 flex-wrap: wrap
@@ -44,14 +28,15 @@
                     margin-top: -2%
                     height: 30%
                 &__button
-                    width: 17%
+                    width: 18vw
                     height: 8vh
                     background: goldenrod
                     font-size: 130%
-                    border-radius: 1.5rem
+                    border-radius: 1.2rem
                     box-shadow: 5px 5px 15px black
                     color: whitesmoke
                     font-family: 'Acme', sans-serif
+                    margin-top: 1%
                     @media only screen and (max-width: 1023px)
                         margin-top: 1%
                         width: 55%
@@ -72,14 +57,13 @@
         width: 100%
         font-family: 'Acme', sans-serif
         color: goldenrod
-        // -webkit-text-stroke: 0.1px black
         @media only screen and (max-width: 1023px)
-            font-size: 130%
+            font-size: 250%
             justify-content: center
-            margin-top: 13%
+            margin-top: 11%
         @media only screen and (min-width: 1024px)
-            font-size: 400%
-            margin-top: -1%
+            font-size: 560%
+            margin-top: -5%
     h4
         font-size: 200%
         display: flex
@@ -123,3 +107,17 @@
             flex-direction: row
             justify-content: space-evenly
             align-items: center
+
+.Typewriter
+    display: flex
+    justify-content: center
+    width: 100%
+    font-size: 200%
+    margin-top: 1.5rem
+    margin-bottom: 1.5rem
+    @media only screen and (max-width: 1023px)
+        font-size: 90%
+        margin-top: 1rem
+        margin-bottom: 3rem
+    &__wrapper
+        font-family: 'Acme', sans-serif
