--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -3,9 +3,7 @@
     height: 88vh
     position: relative
     top: 12vh
-    background: url("/img/bg-5.JPG")
-    background-repeat: no-repeat
-    background-size: cover
+    background-color: #eee0a1
     align-items: center
     @media only screen and (max-width: 1023px)
         top: 8vh
