--- a/my-website-app/src/components/Contact/index.sass
+++ b/my-website-app/src/components/Contact/index.sass
@@ -27,6 +27,8 @@
         align-items: center
         width: 100%
         height: 40%
+        @media only screen and (max-width: 1023px)
+            margin-top: 13%
         &__size
             width: 90%
             display: flex
@@ -58,15 +60,15 @@
         align-items: center
         width: 100%
         height: 30%
-        background-color: #dbdacd
+        //background-color: #dbdacd
         
         @media only screen and (max-width: 1023px)
             width: 90%
-            border-radius: 2rem
             flex-direction: column
             justify-content: space-evenly
             text-align: center
-            border: 2px solid
+            //border-radius: 2rem
+            //border: 2px solid
         &__title
             font-size: 150%
             margin-top: 3%
@@ -86,11 +88,12 @@
                 display: flex
                 justify-items: center
         &__image
-            width: 20%
+            width: 10%
             display: flex
             justify-content: center
             height: 100%
             align-items: center
+            margin-right: 10%
             @media only screen and (max-width: 1023px)
                 display: none
 .button-container
