--- a/my-website-app/src/components/Gifs-search/index.sass
+++ b/my-website-app/src/components/Gifs-search/index.sass
@@ -15,7 +15,7 @@
             margin-top: -2%
        
 
-.gnomes-react
+.gifs-search
     @media only screen and (max-width: 1023px)
         position: absolute
         display: flex
@@ -27,7 +27,7 @@
         position: absolute
         display: flex
         flex-direction: row
-        top: 8vh
+        top: 13.5vh
         width: 98vw
         height: 88vh
         padding: 1%
@@ -53,8 +53,8 @@
             @media only screen and (max-width: 1023px)
                 display: flex
                 flex-direction: row
-                justify-content: space-evenly
                 flex-wrap: wrap
+                justify-content: space-evenly
                 align-self: center
                 height: 40%
                 width: 100%
@@ -69,15 +69,17 @@
                 border-bottom: solid 1px
             &__image
                 @media only screen and (max-width: 1023px)
-                    width: 43%
-                    height: 23vh
+                    width: 75%
+                    height: 21vh
                     align-self: center
                     margin-bottom: 2%
+                    border: 1px solid
                 @media only screen and (min-width: 1024px)
-                    width: 19vw
-                    height: 36vh
+                    width: 35vw
+                    height: 40vh
                     align-self: center
                     margin-bottom: 2%
+                    border: 1px solid
         &__project-info
             @media only screen and (max-width: 1023px)
                 width: 100%
@@ -87,7 +89,7 @@
                 justify-content: flex-start
                 flex-direction: column
                 align-self: center
-                margin-top: -3.5%
+                margin-top: -2%
                 line-height: 17px
                 font-size: 70%
             @media only screen and (min-width: 1024px)
@@ -119,6 +121,7 @@
             flex-direction: column
             align-items: center
             width: 30%
+            margin-top: -1%
             @media only screen and (max-width: 1023px)
                 flex-direction: row
                 width: 100%
@@ -149,7 +152,7 @@
                 flex-direction: column
                 justify-content: center
                 height: 50%
-                margin-top: 5%
+                margin-bottom: 5%
                 @media only screen and (max-width: 1023px)
                     margin-bottom: 0
 
