--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -3,8 +3,11 @@
 
 #close
     position: absolute
-    top: 5%
-    left: 10%
+    top: 28px
+    left: 55px
+    @media only screen and (max-width: 1023px)
+        top: 18px
+        left: 30px
 
 .nav
     position: fixed
@@ -59,7 +62,7 @@
     display: flex
     flex-direction: column
     width: 100%
-    justify-content: space-evenly
+    justify-content: center
     align-items: center
     list-style: none
     cursor: pointer
@@ -69,6 +72,7 @@
         color: black
         font-size: 150%
         font-family: 'Acme', sans-serif
+        padding: 2rem
         &:hover
             cursor: pointer
             transform: scale(1.1) perspective(1px)
@@ -92,7 +96,7 @@
         max-height: 6vh
         margin: 0.5%
         @media only screen and (max-width: 1023px)
-            max-width: 7vw
+            max-width: 8vw
             max-height: 4vh
         &:hover
             cursor: pointer
