--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -32,7 +32,6 @@
             font-size: 215%
         .nav-menu
             &__item-container1
-                //grid-area: padel
                 cursor: pointer
                 height: 19rem
                 width: 100%
@@ -81,7 +80,6 @@
                         -o-transform: scale(1) // Opera
 
             &__item-container2
-                //grid-area: beer
                 height: 19rem
                 width: 100%
                 cursor: pointer
@@ -130,7 +128,6 @@
                         -o-transform: scale(1) // Opera
 
             &__item-container3
-                //grid-area: portfolio
                 height: 19rem
                 width: 100%
                 cursor: pointer
@@ -179,7 +176,6 @@
                         -o-transform: scale(1) // Opera
 
             &__item-container4
-                //grid-area: gnomesreact
                 width: 100%
                 height: 19rem
                 cursor: pointer
@@ -228,7 +224,6 @@
                         -o-transform: scale(0.8) // Opera
 
             &__item-container5
-                //grid-area: gnomesredux
                 width: 100%
                 height: 19rem
                 cursor: pointer
@@ -277,7 +272,6 @@
                         -o-transform: scale(1) // Opera
 
             &__item-container6
-                //grid-area: adevinta
                 width: 100%
                 height: 19rem
                 cursor: pointer
@@ -326,7 +320,6 @@
                         -o-transform: scale(0.8) // Opera
 
             &__item-container7
-                //grid-area: adevinta
                 width: 100%
                 height: 19rem
                 cursor: pointer
@@ -375,7 +368,6 @@
                         -o-transform: scale(1) // Opera
 
             &__item-container8
-                //grid-area: adevinta
                 width: 100%
                 height: 19rem
                 cursor: pointer
@@ -424,7 +416,6 @@
                         -o-transform: scale(1) // Opera
 
             &__item-container9
-                //grid-area: adevinta
                 width: 100%
                 height: 19rem
                 cursor: pointer
@@ -445,6 +436,102 @@
                 align-items: center
                 -webkit-text-stroke: 0.2px black
                 color: #13b313
+                font-family: 'Baloo Bhai'
+                font-size: 160%
+                text-decoration: none
+                opacity: 0
+                transform: scale(0.5)
+                -ms-transform: scale(0.5) // IE 9
+                -moz-transform: scale(0.5) // Firefox
+                -webkit-transform: scale(0.5) // Safari and Chrome
+                -o-transform: scale(0.5) // Opera
+                -webkit-transition: all 500ms ease-in-out // IE 9
+                -moz-transition: all 500ms ease-in-out // Firefox
+                -ms-transition: all 500ms ease-in-out // Safari and Chrome
+                -o-transition: all 500ms ease-in-out // Opera
+                @media only screen and (max-width: 1023px)
+                    opacity: 1
+                    font-size: 6rem
+                    text-align: center
+                &:hover
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
+
+            &__item-container10
+                width: 100%
+                height: 19rem
+                cursor: pointer
+                background: url("/img/tropical-bg.jpg")
+                background-repeat: no-repeat
+                background-size: cover
+                @media only screen and (min-width: 500px)
+                    height: 19rem
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
+            &__item10
+                height: 100%
+                //width: 100vw
+                display: flex
+                justify-content: center
+                align-items: center
+                -webkit-text-stroke: 0.2px black
+                color: #e7f14f
+                font-family: 'Baloo Bhai'
+                font-size: 160%
+                text-decoration: none
+                opacity: 0
+                transform: scale(0.5)
+                -ms-transform: scale(0.5) // IE 9
+                -moz-transform: scale(0.5) // Firefox
+                -webkit-transform: scale(0.5) // Safari and Chrome
+                -o-transform: scale(0.5) // Opera
+                -webkit-transition: all 500ms ease-in-out // IE 9
+                -moz-transition: all 500ms ease-in-out // Firefox
+                -ms-transition: all 500ms ease-in-out // Safari and Chrome
+                -o-transition: all 500ms ease-in-out // Opera
+                @media only screen and (max-width: 1023px)
+                    opacity: 1
+                    font-size: 6rem
+                    text-align: center
+                &:hover
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
+
+            &__item-container11
+                width: 100%
+                height: 19rem
+                cursor: pointer
+                background: url("/img/gifs-bg.gif")
+                background-repeat: no-repeat
+                background-size: cover
+                @media only screen and (min-width: 500px)
+                    height: 19rem
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
+            &__item11
+                height: 100%
+                //width: 100vw
+                display: flex
+                justify-content: center
+                align-items: center
+                -webkit-text-stroke: 0.2px black
+                color: #3bc02f
                 font-family: 'Baloo Bhai'
                 font-size: 160%
                 text-decoration: none
